.vscode/allianceuat_compare/force-app/main/default/objects/Mass_Message__c/Mass_Message__c.object-meta.xml
<CustomObject>
    <label>Mass Message</label>
    <nameField>
        <displayFormat>MASS-M-{0}</displayFormat>
        <label>Mass Message Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mass Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>