.vscode/allianceuat_compare/force-app/main/default/objects/Mass_Message__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Mass Messages</relationshipLabel>
    <relationshipName>Mass_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>