.vscode/allianceuat_compare/force-app/main/default/objects/Mass_Message__c/fields/Error_Reason__c.field-meta.xml
<CustomField>
    <fullName>Error_Reason__c</fullName>
    <label>Error Reason</label>
    <type>TextArea</type>
</CustomField>