.vscode/allianceuat_compare/force-app/main/default/objects/Mass_Message__c/fields/Sent_By__c.field-meta.xml
<CustomField>
    <fullName>Sent_By__c</fullName>
    <formula>CreatedBy.FirstName &amp; &quot; &quot; &amp;  CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sent By</label>
    <type>Text</type>
</CustomField>