.vscode/allianceuat_compare/force-app/main/default/objects/Mass_Message__c/fields/Time_Sent__c.field-meta.xml
<CustomField>
    <fullName>Time_Sent__c</fullName>
    <formula>IF (Now() - CreatedDate &gt; 0, 
TEXT(FLOOR(Now() - CreatedDate)) &amp; &quot; days &quot; &amp; 
TEXT( FLOOR( 24 * (Now() - CreatedDate - FLOOR(Now() - CreatedDate) ))) &amp; &quot; hours &quot; &amp; 
TEXT( ROUND(60 * (ROUND( 24 * (Now() - CreatedDate - FLOOR(Now() - CreatedDate) ),8) - FLOOR( 
ROUND( 24 * (Now() - CreatedDate - FLOOR(Now() - CreatedDate) ),8)) ),0)) &amp; &quot; min ago&quot; 
, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Sent</label>
    <type>Text</type>
</CustomField>