.vscode/allianceuat_compare/force-app/main/default/objects/Mass_Message__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Push</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>